test/fail/annotations-def.grace
def name is ann = object {}
